test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-delete-source/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-clone-sync-delete-source-trigger-ns
