test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-delete-source/policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cpol-clone-sync-delete-source-ns
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: regcred
  namespace: cpol-clone-sync-delete-source-ns
type: Opaque
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-clone-sync-delete-source
spec:
  rules:
  - name: cpol-clone-sync-delete-source-secret
    match:
      any:
      - resources:
          kinds:
          - Namespace
    context:
    - name: source
      variable:
        value: regcred
    generate:
      apiVersion: v1
      kind: Secret
      name: "{{source}}"
      namespace: "{{request.object.metadata.name}}"
      synchronize: true
      clone:
        namespace: cpol-clone-sync-delete-source-ns
        name: "{{source}}"
---
