test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-delete-source/03-deletesource.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: deletesource
spec:
  timeouts: {}
  try:
  - delete:
      apiVersion: v1
      kind: Secret
      name: regcred
      namespace: cpol-clone-sync-delete-source-ns
