test/conformance/chainsaw/generate/clusterpolicy/standard/clone/sync/cpol-clone-sync-delete-source/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: cpol-clone-sync-delete-source
spec:
  concurrent: false
  steps:
  - name: step-00
    try:
    - sleep:
        duration: 3s
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-clone-sync-delete-source
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - assert:
        file: cloned.yaml
  - name: step-03
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: Secret
          name: regcred
          namespace: cpol-clone-sync-delete-source-ns
  - name: step-04
    try:
    - sleep:
        duration: 3s
  - name: step-05
    try:
    - error:
        file: chainsaw-step-05-error-1-1.yaml
